<resources>
    <string name="app_name">Chess Deluxe</string>
    <string name="play">Play</string>
    <string name="credits">Credits</string>
    <string name="how_to_play">How to Play</string>
    <string name="back">back</string>
    <string name="restart">restart</string>
    <string name="local">Local</string>
    <string name="computer">Computer</string>
    <string name="exit">Exit</string>
    <string name="caution_the_harder_the_difficulty_the_more_time_you_ll_spend_doing_nothing_also_the_game_might_just_crash">Caution! The harder the difficulty the more time you\'ll spend doing nothing. Also the game might just crash…</string>
    <string name="eternity">Eternity</string>
    <string name="hell">Hell</string>
    <string name="hard">Hard</string>
    <string name="normal">Normal</string>
    <string name="baby">Baby</string>
    <string name="pawn_tutorial">Pawn Tutorial</string>
    <string name="knight_tutorial">Knight Tutorial</string>
    <string name="bishop_tutorial">Bishop Tutorial</string>
    <string name="rook_tutorial">Rook Tutorial</string>
    <string name="queen_tutorial">Queen Tutorial</string>
    <string name="king_tutorial">King Tutorial</string>
    <string name="fortress_tutorial">Fortress Tutorial</string>
    <string name="thief_tutorial">Thief Tutorial</string>
    <string name="assassin_tutorial">Assassin Tutorial</string>
    <string name="cardinal_tutorial">Cardinal Tutorial</string>
    <string name="pawn_tutorial_text">Pawn Tutorial:\n\n Pawns can move only forwards one space at a time. They can move two spaces on their first move. The pawns can capture other pieces diagonally. Once a pawn reaches the end of the board, it is changed into a knight, bishop, rook or queen, it is the player\'s choice. Try it out!</string>
    <string name="knight_tutorial_text">Knight Tutorial:\n\n Knights can move and capture other pieces in an L shape. The knights can jump over other pieces. Try it out!</string>
    <string name="bishop_tutorial_text">Bishop Tutorial:\n\n Bishops can move and capture other pieces diagonally. Try it out!</string>
    <string name="rook_tutorial_text">Rook Tutorial:\n\n Rooks can move and capture other pieces horizontally and vertically. Try it out!</string>
    <string name="queen_tutorial_text">Queen Tutorial:\n\n Queens can move and capture other pieces horizontally, vertically and diagonally. Try it out!</string>
    <string name="king_tutorial_text">King Tutorial:\n\n Kings are the center of this game. Kings can\'t be captured by other pieces, but they can be put in check. If a king is in check and there are no moves available, the king is in checkmate and the game is over. Kings move and capture pieces in any direction one space at a time. Kings can\'t move on a space if that space is in check. Protect your king at all costs! Also kings can castle. Castling can be achieved by moving the king two spaces towards the rook and the rook will be placed next to the king in the opposite direction of the king\'s move. Castling is not allowed if the king or the rook moved from their initial spots or if the king is in check or if the spaces that the king moves through are in check. Try it out!</string>
    <string name="fortress_tutorial_text">Fortress Tutorial:\n\n Chess Deluxe build upon a normal game of chess and introduces new mechanics and interactions. One of them allows for the creation of fortresses. A fortress is a special chess piece that doesn\'t move nor capture other pieces. Instead it acts as another escape opportunity. Only if your king is in check or checkmate you can \'teleport\' it to any of you fortresses, if you control any. Once \'teleported\', the fortress is removed from the board and the king takes its space. If you wish to make a fortress appear you have to move one of your rook on another rook that you control. This means you loose two rooks for a second chance for your king. Try it out!</string>
    <string name="thief_tutorial_text">Thief Tutorial:\n\n Chess Deluxe adds a leveling system to the pieces. Pawns are one of the pieces that can evolve into another piece. The thief is one of them. It can move up to two spaces horizontally and vertically and can capture pieces next to it situated diagonally. The true power of the thief it\'s the ability to steal opponent pawns by jumping over them. To evolve into a thief, a pawn must gather 15 points of experience by capturing other pieces or by just surviving on the board. The thief is the first option to evolve into. You can only evolve one piece per turn at the start of your turns. Try it out!</string>
    <string name="assassin_tutorial_text">Assassin Tutorial:\n\n The assassin is the second evolution for the pawn. It can move up to two spaces horizontally and vertically. It can capture pieces on the furthest spaces the assassin can move and similar to the knight it can capture pieces in a L shape. Unlike the knight, the assassin can be stopped. If there is a piece next to the assassin horizontally or vertically, the assassin can no longer capture pieces in that direction. Try it out!</string>
    <string name="cardinal_tutorial_text">Cardinal Tutorial:\n\n The cardinal can evolve form a bishop once the bishop accumulated 25 points. The cardinal has a higher status than the bishop. While the bishop moves in diagonals with a 45 degree angle, the cardinal can move in diagonals whit a steeper angle. Try it out!</string>
    <string name="paladin_tutorial">Paladin Tutorial</string>
    <string name="paladin_tutorial_text">Paladin Tutorial:\n\n The paladin can evolve from a knight once the knight accumulated 30 points. The knight, no longer mounted on a horse takes the name of the paladin. With a mighty sword and a big shield, the paladin can move up to 3 spaces horizontally and vertically and can capture pieces next to it in the same directions. The paladin has the ability to push opponent pieces. If an opponent piece is situated 2 spaces away from the paladin\'s position, the paladin can push it one space away, taking its space on the field. If the paladin would push an opponent Pawn to its promotion, the pawn would not promote. If the pushed piece would put your king in check, the push would be canceled. Try it out!</string>
    <string name="river_tutorial">River Tutorial</string>
    <string name="river_tutorial_text">River Tutorial:\n\n The river is an environment piece. Doesn\'t really matter what color it is. Its role is to separate the board, to be an obstacle. Every river comes with a bridge that is the only point for crossing the river. If a piece that moves only one space at a time wants to cross the river it will just pop up on the other side of the bridge. Other pieces that move multiple spaces will just jump over it. Try it out!</string>
    <string name="capricorn_queen_tutorial">Capricorn Queen Tutorial</string>
    <string name="capricorn_queen_tutorial_text">Capricorn Queen Tutorial:\n\n The capricorn can evolve from a queen once she accumulates 30 points. The capricorn ca move horizontally and vertically. If it is next to a river it can move to any other spot that is next to a river. If the king is in check the Capricorn can capture the piece that puts the king in check. Try it out!</string>
    <string name="aquarius_queen_tutorial">Aquarius Queen Tutorial</string>
    <string name="aquarius_queen_tutorial_text">Aquarius Queen Tutorial:\n\n The aquarius can evolve from a queen once she accumulates 30 points. The aquarius has the magnific ability to create a river. There can be only one river on the board. The very first move an aquarius would make would be to make the river. The aquarius can\'t move until a river is on the board. The river will spawn from up-left corne to down-right for the white and the opposite for the black. The aquarius can move 3 spaces in any direction and can move to any space next to the river once it is next to the river. Try it out! </string>

</resources>