<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:rotation="-10"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textColor="@color/cheese"
        android:textSize="40sp" />

    <Button
        android:id="@+id/local_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/cheese"
        android:text="@string/local" />

    <Button
        android:id="@+id/computer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/cheese"
        android:text="@string/computer" />



</LinearLayout>